--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,10 @@
 name: Events Demo 1
-on: [push, workflow_dispatch]
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - development
+      - "david/*"
 jobs:
   deploy:
     runs-on: ubuntu-latest
