add pull request

--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,5 +1,10 @@
 name: Events Demo 1
 on:
+  pull_request:
+    types:
+      - closed
+    branches:
+      - development
   workflow_dispatch:
   push:
     branches:
